--- a/assets/css/Calculator.css
+++ b/assets/css/Calculator.css
@@ -9,7 +9,7 @@
 body {
   padding: 0;
   margin: 0;
-  background: linear-gradient(to right, #00AAFF, #00FF6C);
+  background: linear-gradient(to right, #00d0ff, #55ff00);
 }
 
 .calculator-grid {
@@ -52,7 +52,7 @@ body {
 
 .output {
   grid-column: 1 / -1;
-  background-color: rgba(0, 0, 0, .75);
+  background-color: rgba(0, 0, 0, 0.74);
   display: flex;
   align-items: flex-end;
   justify-content: space-around;
