--- a/assets/css/bmi-calculator.css
+++ b/assets/css/bmi-calculator.css
@@ -6,11 +6,11 @@
 }
 
 .background_image{
- passwordvalidator
+ /* passwordvalidator */
     background-image: url("../Images/pexels-nataliya-vaitkevich-6942085.jpg");
 
     background-image: url("../Images/background-fitness-bmi.jpg");
- main
+ /* main */
     background-repeat: no-repeat;
     background-size: 100% 100%;
     height:100vh;
@@ -56,7 +56,7 @@
     display:grid;
     grid-template-columns: 1fr;
     align-items: center;
-   gap:1em;
+    gap:1em;
 }
 
 .height-section{
